# elody-collection

./: .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  app.py  client_secets.json  dams-api.yaml  dams-collection-api.json  pyproject.toml  renovate.json  requirements.txt  requirements_dev.txt  validator.py
api/: api_base.py  app.py  app_context.py  apps  configuration.py  exceptions.py  filters.json  filters_new.json  glitchtip.py  health.py  init_api.py  jelly_stream.py  jobs.py  mappers.py  metrics.py  policy_factory.py  rabbit.py  tracing.py  util.py  validator.py
api/amqp/: amqpmanager.py  amqpstormmanager.py  pikamanager.py
api/apps/: app_list.json  app_list.yaml  asset_express_engine  digipolis  loader.py  mediamosa_wrapper  role_scope_mapping.json
api/cron_jobs/: mediafile_cleaner.py  ttl_checker.py
api/docs/: dams-collection-api.json
api/elody_types/: base_entity_types.py
api/filters/: arango_filters.py  arango_filters_new.py  arango_filters_old.py  filter_manager.py  filter_matcher_mapping.py  mongo_filters.py  mongo_filters_new.py  mongo_filters_old.py
api/filters_v2/: arango_wrapper.py  filter_manager.py  filter_matcher_mapping.py  filter_option.py  mongo_filters.py
api/logging_elody/: logger.py
api/loki_logs/: json_loki_logger.py  loki_context_logger.py  loki_logger.py
api/migration/: base_object_migrator.py  bulk_migrator.py  lazy_migrator.py  migrate.py  migrator.py
api/models/: mediafile.py
api/object_configurations/: base_object_configuration.py  entity_configuration.py  mediafile_configuration.py  none_configuration.py  object_configuration_mapper.py
api/policies/: x_user_headers_policy.py
api/resources/: base_filter_resource.py  base_resource.py  batch.py  box_visit.py  config.py  cron.py  csv_importer.py  entity.py  filter.py  generic_object.py  history.py  importer.py  jelly_stream.py  job.py  key_value_store.py  mediafile.py  queues.py  saved_search.py  share_link.py  spec.py  story_box.py  tenant.py  ticket.py  unique.py  user.py
api/scripts/: sync_typesense_facets.py
api/search/: typesense_client.py
api/serialization/: case_converter.py  serialize.py  serializer.py
api/storage/: arangostore.py  genericstore.py  httpstore.py  memorystore.py  mongostore.py  py_arango_connection_extension.py  storagemanager.py
api/tests/: base_case.py  conftest.py  test_app_context.py  test_distinct_options.py  test_entity.py  test_job.py  test_mediafile.py  test_mongo_filters_count.py  test_sync_typesense_facets.py  test_tenant.py
api/validation/: validate.py  validator.py
classes/: job_helper.py
docker/: Dockerfile  entrypoint.sh  run-tests.sh  test-coverage.sh
docs/: dams-collection-api.json
jobstatus/: README.md  main.py  requirements.txt
jobstatus/configuration/: config.py
jobstatus/model/: __init__.py  jobs.py  user.py
jobstatus/mutation/: __init__.py  endpoint.py  resolver.py  root_mutation.py
jobstatus/query/: __init__.py  endpoint.py  resolver.py  root_query_class.py
jobstatus/schema/: __init__.py  input_difinition.graphql  root.graphql  root.py  type_definition.graphql
models/: asset.py  entity.py  tenant.py
resources/: asset.py  base_resource.py  entity.py  extend_resources.py  importer.py  job.py  job_status.py  job_status_resource.py  jobs.py  mediafile.py  spec.py  tenant.py
storage/: arangostore.py  memorystore.py  mongostore.py  py_arango_connection_extension.py  storagemanager.py  teststore.py
stubs/: configuration.pyi
tests/: base_case.py  test_entity.py  test_importer.py  test_job.py  test_job_status.py  test_mediafile.py  test_tenant.py
workers/: importer.py  jobs.py
(+100 files in other folders)
