[project]
name = "base-collection-api"
version = "0.1.0"
description = "Base repository for the elody collection-api"
readme = "README.md"
requires-python = "~=3.13.0"
dependencies = [
  "amqpstorm==2.11.1",
  "amqpstorm-flask==0.6.1",
  "aniso8601==10.0.0",
  "apscheduler==3.11.2",
  "attrs==25.3.0",
  "authlib==1.7.2",
  "blinker==1.9.0",
  "certifi==2026.6.17",
  "cffi==2.0.0",
  "charset-normalizer==3.4.7",
  "click==8.1.8",
  "cloudevents==2.0.0",
  "cryptography==48.0.1",
  "decorator==5.2.1",
  "deprecation==2.1.0",
  "dnspython==2.8.0",
  "elody[loader]==0.0.260",
  "flask==3.1.3",
  "flask-restful==0.3.10",
  "flask-swagger-ui==4.11.1",
  "gunicorn==23.0.0",
  "idna==3.18",
  "importlib-metadata==8.6.1",
  "inuits-policy-based-auth==10.1.0",
  "inuits-python-logging-loki==1.4.1",
  "itsdangerous==2.2.0",
  "jinja2==3.1.6",
  "jsonschema==4.23.0",
  "jsonschema-specifications==2024.10.1",
  "markupsafe==3.0.2",
  "opentelemetry-api==1.43.0",
  "opentelemetry-exporter-otlp-proto-http==1.43.0",
  "opentelemetry-instrumentation-flask==0.64b0",
  "opentelemetry-instrumentation-pymongo==0.64b0",
  "opentelemetry-sdk==1.43.0",
  "packaging==24.2",
  "pamqp==2.3.0",
  "pika==1.3.2",
  "prometheus-client==0.25.0",
  "prometheus-flask-exporter==0.23.2",
  "py==1.11.0",
  "py-healthcheck==1.10.1",
  "pycparser==2.22",
  "pyjwt==2.13.0",
  "pymongo==4.10.1",
  "pyparsing==3.2.3",
  "python-arango==7.9.1",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "rabbitmq-pika-flask==1.2.35",
  "rdflib==7.1.3",
  "referencing==0.36.2",
  "requests==2.34.2",
  "requests-cache==1.3.2",
  "requests-toolbelt==1.0.0",
  "retry==0.9.2",
  "rfc3339==6.2",
  "rpds-py==0.23.1",
  "sentry-sdk[flask]==2.63.0",
  "six==1.17.0",
  "typesense==0.21.0",
  "tzlocal==5.3.1",
  "urllib3==2.7.0",
  "werkzeug==3.1.6",
  "zipp==3.21.0",
]


[tool.ty.environment]
root = ["./api"]


[tool.ruff.lint]
extend-select = [
  "F",      # Pyflakes: Basic logical errors and unused variables
  "E",      # pycodestyle errors: Actual PEP8 violations (not just whitespace)
  "ERA",    # Eradicate: remove commented out code
  "I",      # isort: Keeps imports tidy automatically
  "UP",     # pyupgrade: Keeps syntax modern (mostly auto-fixable)
  "B",      # flake8-bugbear: Essential for catching common design flaws
  "PTH",    # flake8-use-pathlib: prefer pathlib objects over os.path
  "RUF",    # Ruff-specific: Generally sensible and high-performance rules
  "C4",     # flake8-comprehensions: enforce better list/dict/set comprehensions
  "LOG",    # flake8-logging: catch bad logging practices (like f-strings in log messages)
  "T20",    # flake8-print: catch leftover debug print statements
  "DTZ",    # Datetime Timezone: Since we're doing quite some datetime logic around the notifications, this should help catch bugs
  "FIX002", # Errors on lines with a TODO, disable for those lines with # noqa: FIX002
]
ignore = [
  "A003",   # Allow class attributes to shadow built-ins (e.g., model.id)
  "B006",   # Allow mutables as default arg: This actually needs to be fixed since it can cause bugs but generally we don't use it in a way that can actually cause bugs
  "RUF012", # Allow mutables as default class member: This actually needs to be fixed since it can cause bugs
  "E722",   # Allow bare excepts (we don't have enough custom exceptions)
  "E501",   # Ignore line length (let the formatter handle this)
]

[dependency-groups]
dev = [
  "coverage==7.10.6",
  "iniconfig==2.0.0",
  "pluggy==1.5.0",
  "pytest==9.0.3",
  "pytest-cov==7.0.0",
  "pytest-xdist==3.8.0",
]
